# hydro_assignment_kumar_ravindra

./: .gitignore  README.md  pytest.ini
.github/workflows/: deploy-core.yml  deploy-pipeline.yml
pipelines/geospatial_pipeline/: Dockerfile  pyproject.toml
pipelines/geospatial_pipeline/src/: repository.py
pipelines/geospatial_pipeline/src/assets/: geospatial_asset.py  io_managers.py
pipelines/geospatial_pipeline/src/jobs/: field_data_job.py
pipelines/geospatial_pipeline/src/models/: geospatial_models.py
pipelines/geospatial_pipeline/src/utils/: geospatial_utils.py  logging.py
pipelines/geospatial_pipeline/tests/: conftest.py
pipelines/geospatial_pipeline/tests/unit/: test_geospatial_asset.py  test_geospatial_utils.py
terraform/: backend.tf  main.tf  outputs.tf  provider.tf  terraform.tfvars.dev  terraform.tfvars.prod  variables.tf  version.tf
terraform/modules/cloudwatch/: main.tf  outputs.tf  variables.tf
terraform/modules/dagster-helm/: main.tf  outputs.tf  variables.tf
terraform/modules/eks-node-group/: main.tf  outputs.tf  variables.tf
terraform/modules/rds/: main.tf  outputs.tf  variables.tf
terraform/modules/s3/: main.tf  outputs.tf  variables.tf
terraform/modules/secrets/: main.tf  outputs.tf
terraform/modules/user-code/: main.tf  outputs.tf  variables.tf
