[tool.poetry]
name = "geospatial-pipeline"
version = "0.1.0"
description = "Geospatial pipeline with daily partitions"
authors = ["Kumar"]

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
dagster = "^1.7.0"
dagster-aws = "^0.23.0"
geopandas = "^1.0.0"
boto3 = "^1.34.0"
pydantic = "^2.8.0"

[tool.poetry.group.test.dependencies]
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"